--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^7.1.7",
-    "sass-embedded": "^1.93.2"
+    "sass": "^1.93.3",
+    "sass-embedded": "^1.93.2",
+    "vite": "^7.1.7"
   }
 }
